Add more footer styling

--- a/style.css
+++ b/style.css
@@ -102,10 +102,22 @@ footer {
   padding-top: 2%;
 }
 
+/* Widget Title Labels */
+
 .left-footer-widget-title,
 .middle-footer-widget-title,
 .right-footer-widget-title {
   color: #12244f;
+}
+
+/* Icon Labels */
+
+.zoom-social_icons-list__label {
+    color: #12244f;
+}
+
+.zoom-social_icons-list__label:hover {
+    color: #6da69b;
 }
 
 /* ======================
