Change services widget title color

--- a/style.css
+++ b/style.css
@@ -140,6 +140,7 @@ footer {
 .widget-homepage-services-title {
   padding-bottom: 2%;
   text-align: left;
+  color: #ffffff;
 }
 
 .container-fluid.services-section {
