--- a/style.css
+++ b/style.css
@@ -91,6 +91,15 @@ nav {
   display: inline;
 }
 
+/* Welcome Bar */
+
+.mysticky-welcomebar-btn,
+.mysticky-welcomebar-content {
+    font-family: acumin-pro,sans-serif;
+    font-weight: 400;
+    font-style: normal;
+}
+
 /* ======================
 
   Footer Styling
