Add padding to contact us h3

--- a/style.css
+++ b/style.css
@@ -187,6 +187,11 @@ footer {
 
 ======================== */
 
+.contact-map-widget-title {
+  padding:20px 0px;
+
+}
+
 
 
 /* ======================
