--- a/style.css
+++ b/style.css
@@ -128,6 +128,9 @@ footer {
 
 .homepage-services-title-widget-title {
   color: #ffffff;
+  font-family: acumin-pro-extra-condensed,sans-serif;
+  font-weight: 400;
+  font-style: normal;
 }
 
 .services-section {
@@ -136,14 +139,22 @@ footer {
 }
 
 .widget-homepage-services-title {
-  padding-bottom: 2%;
-  text-align: left;
+  padding-bottom: 4%;
   color: #ffffff;
 }
 
 .container-fluid.services-section {
   margin: 7% 0;
   text-align: center;
+}
+
+.services-section p {
+  font-family: acumin-pro-wide,sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  color: #ffffff;
+  padding-top: 10%;
+
 }
 
 /* ======================
