Switch widget order

--- a/style.css
+++ b/style.css
@@ -178,7 +178,7 @@ footer {
 ======================== */
 
 .container-company-purpose {
-  background: #6da69b;
+  background: #f9f9f9;
   padding: 3% 5%;
   text-align: center;
 }
