--- a/style.css
+++ b/style.css
@@ -183,6 +183,14 @@ footer {
   text-align: center;
 }
 
+.widget-company-introuction {
+  padding: 7% 0 5% 0;
+}
+
+.widget-founder-section {
+  padding: 7% 0;
+}
+
 .widget-company-purpose h5 {
   font-family: acumin-pro,sans-serif;
   font-weight: 400;
