--- a/style.css
+++ b/style.css
@@ -204,6 +204,7 @@ footer {
   font-family: acumin-pro-wide,sans-serif;
   font-weight: 600;
   font-style: normal;
+  padding-top: 1%;
 }
 
 /* ======================
