--- a/style.css
+++ b/style.css
@@ -213,9 +213,49 @@ footer {
 
 ======================== */
 
-img.image.wp-image-120.attachment-full.size-full {
-    max-width: 75%;
+.widget-service-img1 {
+    max-width: 80%;
 }
+
+.widget-service-img2 {
+    max-width: 80%;
+}
+.widget-service-img3 {
+    max-width: 80%;
+}
+.widget-service-img4 {
+    max-width: 80%;
+}
+.widget-service-img5 {
+    max-width: 80%;
+}
+.widget-service-img6 {
+    max-width: 80%;
+}
+
+.widget-service-txt1 {
+    padding-bottom: 20px;
+}
+.widget-service-txt2 {
+    padding-bottom: 20px;
+}
+
+.widget-service-txt3 {
+    padding-bottom: 20px;
+}
+
+.widget-service-txt4 {
+    padding-bottom: 20px;
+}
+
+.widget-service-txt5 {
+    padding-bottom: 20px;
+}
+
+.widget-service-txt6 {
+    padding-bottom: 20px;
+}
+
 
 /* ======================
 
