Update h2 font family for services page

--- a/style.css
+++ b/style.css
@@ -214,6 +214,7 @@ footer {
 ======================== */
 
 h2.entry-title2 {
+  font-family: acumin-pro,sans-serif;
   padding-bottom: 20px;
   padding-top: 20px;
 }
