Update Homepage Manifesto widget

--- a/style.css
+++ b/style.css
@@ -132,12 +132,12 @@ footer {
 
 /* Manifesto Section */
 
-.homepage-intro-title-widget-title,
+/* .homepage-intro-title-widget-title,
 .manifesto-title-widget-title {
   font-family: acumin-pro-extra-condensed,sans-serif;
   font-weight: 400;
   font-style: normal;
-}
+} */
 
 /* Services Section */
 
