--- a/style.css
+++ b/style.css
@@ -124,6 +124,20 @@ footer {
   color: #6da69b;
 }
 
+/* Mobile Responsiveness Footer Widgets */
+
+@media (max-width:992px) {
+  footer {
+    text-align: center;
+  }
+
+  .widget-left-footer,
+  .widget-middle-footer,
+  .widget-right-footer {
+    padding-bottom: 2%;
+  }
+}
+
 /* ======================
 
   Homepage
