--- a/style.css
+++ b/style.css
@@ -134,7 +134,8 @@ footer {
   .widget-left-footer,
   .widget-middle-footer,
   .widget-right-footer {
-    padding-bottom: 2%;
+    padding: 6%;
+    margin: 0 auto;
   }
 }
 
