--- a/style.css
+++ b/style.css
@@ -49,6 +49,15 @@ h6 {
 
 /* Buttons */
 
+.btn-primary {
+  background: #6da69b;
+  border: none;
+}
+
+.btn-primary:hover {
+  background: #12244f;
+}
+
 
 /* ======================
 
@@ -323,7 +332,7 @@ h2.entry-title {
 }
 
 .error-container {
-  padding: 5% 0 10% 0;
+  padding: 5% 10% 10% 10%;
 }
 
 
