--- a/style.css
+++ b/style.css
@@ -329,6 +329,7 @@ h1.testimonials-widget-area-logo-title {
   font-family: acumin-pro,sans-serif;
   padding-bottom: 20px;
   padding-top: 20px;
+  font-size: 18px;
 }
 
 /* ======================
