--- a/style.css
+++ b/style.css
@@ -332,6 +332,9 @@ h1.testimonials-widget-area-logo-title {
   font-size: 18px;
 }
 
+.clientsimg {
+  background: #939393;
+}
 /* ======================
 
   Contact Us
