--- a/style.css
+++ b/style.css
@@ -332,8 +332,8 @@ h1.testimonials-widget-area-logo-title {
   font-size: 20px;
 }
 
-section.clientsimg {
-  padding: 20px;
+.clientsimg {
+  padding: 20px 10px;
 }
 /* ======================
 
