--- a/style.css
+++ b/style.css
@@ -269,8 +269,7 @@ footer {
 
 ======================== */
 
-h2.entry-title2 {
-  font-family: acumin-pro,sans-serif;
+h1.entry-title2 {
   padding-bottom: 20px;
   padding-top: 20px;
 }
@@ -325,8 +324,11 @@ h2.entry-title2 {
 
 ======================== */
 
+.entry-title-testimonial {
+  padding:20px 0px;
+}
+
 h1.testimonials-widget-area-logo-title {
-  font-family: acumin-pro,sans-serif;
   padding-bottom: 20px;
   padding-top: 20px;
   font-size: 20px;
@@ -340,11 +342,6 @@ h1.testimonials-widget-area-logo-title {
   Contact Us
 
 ======================== */
-
-h2.entry-title {
-  font-family: acumin-pro,sans-serif;
-}
-
 
 .contact-map-widget-title {
   padding:30px 0px;
