--- a/style.css
+++ b/style.css
@@ -235,7 +235,7 @@ footer {
 
 .container-company-purpose {
   background: #f9f9f9;
-  padding: 5% 0;
+  padding: 5% 0 3% 0;
 }
 
 .widget-company-introuction {
