--- a/style.css
+++ b/style.css
@@ -334,6 +334,10 @@ h1.testimonials-widget-area-logo-title {
 
 ======================== */
 
+h1.contact-title {
+  padding: 50px 0px;
+}
+
 .contact-map-widget-title {
   padding:30px 0px;
 }
