--- a/style.css
+++ b/style.css
@@ -335,7 +335,7 @@ h1.testimonials-widget-area-logo-title {
 ======================== */
 
 h1.contact-title {
-  padding: 50px 0px;
+  padding: 50px 0px 10px;
 }
 
 .contact-map-widget-title {
