--- a/style.css
+++ b/style.css
@@ -343,7 +343,8 @@ h1.contact-title {
 }
 
 .widget-contact-form {
-  padding-top: 45px;
+  padding-top: 40px;
+  padding-bottom: 40px;
 }
 
 /* ======================
