--- a/style.css
+++ b/style.css
@@ -326,7 +326,7 @@ h1.testimonials-widget-area-logo-title {
 }
 
 .clientsimg {
-  padding: 50px 10px;
+  padding: 50px 10px 10px;
 }
 /* ======================
 
