--- a/style.css
+++ b/style.css
@@ -326,7 +326,21 @@ h1.testimonials-widget-area-logo-title {
 }
 
 .clientsimg {
-  padding: 50px 10px 10px;
+  padding: 50px 10px;
+}
+
+.widget-testimonials-logo-img1 {
+  padding:10px;
+}
+.widget-testimonials-logo-img2 {
+  padding:10px;
+}
+.widget-testimonials-logo-img3 {
+  padding:10px;
+}
+
+.widget-testimonials-logo-img4 {
+  padding:10px;
 }
 /* ======================
 
