Minor adjustment to logo padding on testimonial page

--- a/style.css
+++ b/style.css
@@ -330,17 +330,19 @@ h1.testimonials-widget-area-logo-title {
 }
 
 .widget-testimonials-logo-img1 {
-  padding:10px;
+  padding-bottom: 15px;
 }
+
 .widget-testimonials-logo-img2 {
-  padding:10px;
+  padding-bottom: 15px;
 }
+
 .widget-testimonials-logo-img3 {
-  padding:10px;
+  padding-bottom: 15px;
 }
 
 .widget-testimonials-logo-img4 {
-  padding:10px;
+  padding-bottom: 15px;
 }
 /* ======================
 
