Edit styling for services icons

--- a/style.css
+++ b/style.css
@@ -295,26 +295,6 @@ h1.entry-title2 {
 .col-lg-2 services {
   text-align: center;
 }
-.widget-service-img1 {
-  max-width: 80%;
-}
-
-.widget-service-img2 {
-  max-width: 80%;
-}
-.widget-service-img3 {
-  max-width: 80%;
-}
-.widget-service-img4 {
-  max-width: 80%;
-}
-.widget-service-img5 {
-  max-width: 80%;
-}
-.widget-service-img6 {
-  max-width: 80%;
-}
-
 .widget-service-txt1 {
   padding-bottom: 20px;
 }
@@ -404,7 +384,7 @@ h1.contact-title {
 }
 
 .error-container {
-  padding: 7% 10%;
+  padding: 5% 10% 30% 10%;
 }
 
 
