--- a/style.css
+++ b/style.css
@@ -292,7 +292,7 @@ h1.entry-title2 {
   padding: 50px 0px;
 }
 
-.col-lg-2 services {
+.col-lg-2.services {
   text-align: center;
 }
 .widget-service-txt1 {
