--- a/style.css
+++ b/style.css
@@ -318,7 +318,10 @@ h1.entry-title2 {
   padding-bottom: 20px;
 }
 
-
+.widget_text.widget-service-cta {
+    padding-bottom: 50px;
+    text-align: center;
+}
 
 /* ======================
 
