Delet video widget

--- a/style.css
+++ b/style.css
@@ -292,9 +292,9 @@ footer {
   padding-top: 1%;
 }
 
-/* Newsletter & Video */
+/* Newsletter */
 
-.container-video-newsletter {
+.container-newsletter {
   padding-bottom: 7%;
 }
 
