Adjust styling for logo title on testimonials page

--- a/style.css
+++ b/style.css
@@ -354,7 +354,8 @@ h1.entry-title-testimonial {
 h1.testimonials-widget-area-logo-title {
   padding-bottom: 20px;
   padding-top: 20px;
-  font-size: 26px;
+  font-size: 30px;
+  padding-left: 10px;
 }
 
 
