--- a/style.css
+++ b/style.css
@@ -167,13 +167,11 @@ footer {
 /* Mobile Responsiveness Footer Widgets */
 
 @media (max-width:992px) {
-
   .widget-left-footer,
   .widget-middle-footer,
   .widget-right-footer {
     padding: 6% 0;
   }
-
 }
 
 /* ======================
@@ -251,6 +249,32 @@ footer {
 
 .widget-homepage-manifesto h6 {
   padding-top: 1%;
+}
+
+/* Mobile Responsiveness */
+
+@media (max-width:800px) {
+  
+  .intro-section {
+    padding: 15% 0;
+  }
+
+  h6 {
+    line-height: 1.4;
+  }
+
+  h1 {
+    line-height: 1em;
+  }
+
+  .container.manifesto-section {
+    padding: 15% 0;
+  }
+
+  .container-fluid.services-section {
+    padding: 10% 0;
+  }
+
 }
 
 /* ======================
