Adjust padding one more time

--- a/style.css
+++ b/style.css
@@ -472,8 +472,8 @@ h1.contact-title {
   }
 
   .container-company-purpose {
-    padding: 10% 0 15% 0;
-    margin-bottom: 10%;
+    padding: 10% 0;
+    margin-bottom: 7%;
   }
 
   .widget-founder-image {
