--- a/style.css
+++ b/style.css
@@ -472,16 +472,16 @@ h1.contact-title {
   }
 
   .container-company-purpose {
-    padding: 10% 0;
-    margin-bottom: 7%;
+    padding: 10% 0 5%;
+    margin-bottom: 5%;
   }
 
   .widget-founder-image {
-    margin-top: 7%;
+    margin-top: 5%;
   }
 
   .container.container-founder-section {
-    margin-top: 7%;
+    margin-top: 5%;
   }
 
   .container-newsletter {
