--- a/style.css
+++ b/style.css
@@ -464,7 +464,7 @@ h1.contact-title {
   .widget-homepage-services-four a,
   .widget-homepage-services-five a,
   .widget-homepage-services-six a {
-    padding-bottom: 5% 0;
+    padding-bottom: 5%;
   }
 
   .widget-homepage-banner-image {
