--- a/style.css
+++ b/style.css
@@ -339,7 +339,7 @@ label#field_mdwt5_label {
 }
 
 /* Page Banner */
-section.about-page-banner-image {
+div.about-page-banner-image {
   background: #f9f9f9;
 }
 
