--- a/style.css
+++ b/style.css
@@ -371,6 +371,11 @@ h1.entry-title2 {
   text-align: center;
 }
 
+.container-newsletter-services {
+  background: #ffffff;
+  padding: 5% 2% 2% 5%;
+}
+
 /* ======================
 
   Testimonials
