--- a/style.css
+++ b/style.css
@@ -398,6 +398,10 @@ h1.entry-title-testimonial {
   padding: 20px 10px;
 }
 
+.widget_text.widget-testimonials-contact-cta {
+    padding: 5% 0 10% 2%;
+}
+
 /* ======================
 
   Contact Us
