Additional styling for featured image and post padding for blog-post.php

--- a/style.css
+++ b/style.css
@@ -430,7 +430,7 @@ h1.contact-title {
 ======================== */
 
 /*styling for the header image*/
-.col-12 blog-post {
+.col-12.blog-post {
     text-align: center;
     padding: 20px;
 }
