--- a/style.css
+++ b/style.css
@@ -405,7 +405,7 @@ h1.entry-title-testimonial {
 }
 
 .widget-testimonials-logo-title {
-  padding: 20px 10px;
+  padding: 50px 10px 10px 10px;
 }
 
 .widget_text.widget-testimonials-contact-cta {
