Update padding on testimonial page

--- a/style.css
+++ b/style.css
@@ -408,6 +408,10 @@ h1.entry-title-testimonial {
   padding: 50px 10px 10px 10px;
 }
 
+div#sp-testimonial-free-wrapper-189 {
+    padding-bottom: 50px;
+}
+
 .widget_text.widget-testimonials-contact-cta {
     padding: 5% 0 10% 2%;
 }
