Edit font colors on contact us page

--- a/style.css
+++ b/style.css
@@ -436,7 +436,7 @@ h1.contact-title {
 }
 
 span.zoom-social_icons-list__label {
-    color: #6da69b;
+    color: #12244f;
 }
 
 /* ======================
