--- a/style.css
+++ b/style.css
@@ -426,13 +426,17 @@ h1.contact-title {
   padding: 50px 0px 10px;
 }
 
+.contactus-padding {
+  padding-bottom: 75px;
+}
+
 .contact-map-widget-title {
   padding:30px 0px;
 }
 
 .widget-contact-form {
   padding-top: 40px;
-  padding-bottom: 100px;
+  padding-bottom: 40px;
 }
 
 span.zoom-social_icons-list__label {
