Add active link to nav bar

--- a/style.css
+++ b/style.css
@@ -109,6 +109,10 @@ nav {
   display: inline;
 }
 
+li.current-menu-item a {
+  color: #6da69b;
+}
+
 /* Welcome Bar */
 
 .mysticky-welcomebar-btn,
