--- a/style.css
+++ b/style.css
@@ -460,9 +460,10 @@ span.zoom-social_icons-list__label {
 ======================== */
 
 /*styling for the header image*/
-.col-lg-9.col-md-8.col-sm-12.blog-post {
+.col-lg-9 blog-post {
     text-align: center;
     padding: 20px;
+    width: 100%;
 }
 
 /* ======================
