Add padding to bottom of blog post content via single.php

--- a/style.css
+++ b/style.css
@@ -467,6 +467,9 @@ span.zoom-social_icons-list__label {
     object-fit: cover;
 }
 
+.blog-content {
+  padding-bottom: 5%;
+}
 /* ======================
 
   Blog Overview
